type & error improvements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,8 +64,8 @@ exclude = [
 pythonVersion = "3.11"
 typeCheckingMode = "strict"
 reportMissingTypeStubs = "error"
-reportUnknownMemberType = "warning"
-reportUnknownVariableType = "warning"
+reportUnknownMemberType = "error"
+reportUnknownVariableType = "error"
 reportUnknownArgumentType = "error"
 reportGeneralTypeIssues = "error"
 reportOptionalMemberAccess = "error"
@@ -84,7 +84,7 @@ reportUnusedVariable = "error"
 reportDuplicateImport = "error"
 reportWildcardImportFromLibrary = "error"
 reportSelfClsParameterName = "error"
-reportImplicitStringConcatenation = "warning"
+reportImplicitStringConcatenation = "error"
 reportUndefinedVariable = "error"
 reportAssertAlwaysTrue = "error"
 reportFunctionMemberAccess = "error"
