--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,8 @@
-pytest==8.3.5
+pytest>=8.4.1
 pytest-asyncio>=0.21.0
 fastmcp>=2.0.0
-pyright>=1.1.401
-ruff>=0.11.13
+pyright>=1.1.403
+ruff>=0.12.09
 pip-audit>=2.9.0
 types-requests>=2.32.0
 types-setuptools>=80.9.0
