use .env in docker

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,21 +1,24 @@
-# Ignore VCS
+# Version control (git metadata & config)
 .git
 .gitignore
 
-# Python cache
+# Python cache / compiled files
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
 *.pytest_cache/
 
-# Local configs
+# Local / environment-specific configs
 .env
 *.env
 *.local
 *.log
 
-# Dev stuff
+# Keep template env file available in image
+!.env.example
+
+# Development / editor files
 tests/
 .vscode/
 .idea/
