--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,16 @@
 services:
   trakt_mcpserver:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile
     container_name: trakt_mcpserver
     ports:
-      - 8080:8080
+      - "${TRAKT_MCP_SERVER_LOCAL_PORT:-8080}:8080"
+    env_file:
+      - t.env
     environment:
-      - TRAKT_CLIENT_ID=${TRAKT_CLIENT_ID}
-      - TRAKT_CLIENT_SECRET=${TRAKT_CLIENT_SECRET}
+      - TRAKT_CLIENT_ID=${TRAKT_CLIENT_ID:-}
+      - TRAKT_CLIENT_SECRET=${TRAKT_CLIENT_SECRET:-}
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/status"]
