--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
   trakt_mcpserver:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
     container_name: trakt_mcpserver
     ports:
       - "${TRAKT_MCP_SERVER_LOCAL_PORT:-8080}:8080"
     env_file:
-      - t.env
+      - .env
     environment:
       - TRAKT_CLIENT_ID=${TRAKT_CLIENT_ID:-}
       - TRAKT_CLIENT_SECRET=${TRAKT_CLIENT_SECRET:-}
