--- a/.github/workflows/push_ghcr.yml
+++ b/.github/workflows/push_ghcr.yml
@@ -26,6 +26,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/trakt_mcpserver:latest
+          tags: ghcr.io/${{ github.repository }}:latest
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}
